--- a/index.html
+++ b/index.html
@@ -6,15 +6,35 @@
     </style>
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
-    <title>Title</title>
+    <title>Шафа Амрах</title>
   </head>
   <body>
     <div>
-      <div class="navbar">
-        <h1 class="heading-style-2"><strong>Navbar Text</strong></h1>
+      <div class="navbar text-align">
+        <h2 class="heading-style-1"><strong>+994 55 943 67 78    amrafa78@gmail.com    Skype : Шафа Амрах</strong></h2>
       </div>
-      <h1 class="left custom_color">"Раскрась свою жизнь яркими красками!"</h1>
-      <h2 class="paragraph">Сдеай первый шаг на пути к счастью, здоровью и свободы. Свободы от чужого мнения, свобода от зависимости. Освободись от оков вины, обиды, тревоги, страха, печали, сними с себя не удачи, горести, болезни! Подари себе возмоность дышать полной грудью, без зависти и злости. Полюби и прими себя! Ведь ты уникален! Создай нового счастливого себя!</h2>
+      <div class="div1">
+        <h1 class="left custom_color">"Раскрась свою жизнь яркими красками!"</h1>
+        <h2 class="paragraph">Сделай первый шаг на пути к счастью, здоровью и свободы. Свободы от чужого мнения, свобода от зависимости. Освободись от оков вины, обиды, тревоги, страха, печали, сними с себя не удачи, горести, болезни! Подари себе возмоность дышать полной грудью, без зависти и злости. Полюби и прими себя! Ведь ты уникален! Создай нового счастливого себя!</h2>
+      </div>
+    </div>
+    <div class="text-align">
+      <a class="a_href" href="images/diploma.jpg">Посмотреть</a>
+      <a class="a_href" href="images/diploma1.jpg">Посмотреть</a>
+      <a class="a_href" href="images/diploma2.jpg">Посмотреть</a>
+      <a class="a_href" href="images/diploma3.jpg">Посмотреть</a>
+      <a class="a_href" href="images/diploma4.jpg">Посмотреть</a>
+    </div>
+    <div class="text-align">
+      <img class="image" src="images/diploma.jpg" alt="diplom" width="200" height="100">
+      <img class="image" src="images/diploma1.jpg" alt="diplom" width="200" height="100">
+      <img class="image" src="images/diploma2.jpg" alt="diplom" width="200" height="100">
+      <img class="image" src="images/diploma3.jpg" alt="diplom" width="200" height="100">
+      <img class="image" src="images/diploma4.jpg" alt="diplom" width="200" height="100">
+    </div>
+    <div class="text-align div2">
+      <h2 class="paragraph">Используй воображение, твори, как тебе нравится</h2>
+      <p class="paragraph">Шафа Амрах - Аналитический психолог</p>
     </div>
   </body>
   <footer><strong>© Copyright 2021</strong></footer>
